--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseurl = "https://zhaohuabing.com"
+baseurl = "https://oseniabdulhaleem.pages.dev"
 title = "oseniabdulhaleem"
 theme = "hugo-theme-cleanwhite"
-languageCode = "en-us"
+languageCode = "en-uk"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 googleAnalytics = ""
@@ -15,7 +15,7 @@ home = ["HTML", "RSS", "Algolia"]
 [params]
   header_image = "img/first-star.png"
   SEOTitle = "oseniabdulhaleem Blog"
-  description = "赵化冰，程序员, 开源爱好者，生活探险家 | 这里是 赵化冰 的博客，与你一起发现更大的世界。"
+  description = "Oseni Abdulhaleem Blog"
   keyword = "Oseni Abdulhaleem, , Software Engineer, Rust, oseniabdulhaleem Blog, Javascript, Git, React, Web, cloudflare, PaaS, Istio, Kubernetes, AWS, Microservice"
   slogan = "The dao (to be not to be seen)"
 
@@ -73,10 +73,10 @@ home = ["HTML", "RSS", "Algolia"]
   #googleplus    = "full profile url in googleplus"
   #twitter       = "full profile url in twitter"
   linkedin       = "https://www.linkedin.com/in/oseniabdulhaleem/"
-  stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
+  #stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
   #instagram     = "full profile url in instagram"
   github         = "https://github.com/oseniabdulhaleem"
-  wechat         = "your wechat qr code image"
+  #wechat         = "your wechat qr code image"
   #medium        = "full profile url in medium"
   #slack         = "full workspace url in slack"
   #pinterest     = "full profile url in pinterest"
